--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,10 +21,10 @@ jobs:
           cache: "npm"
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Install playground dependencies
-        run: cd playground && npm ci
+        run: cd playground && npm install
 
       - name: Start dev server
         run: |
