--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
     "tsup": "8.3.0",
     "typescript": "^5.5.2"
   },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.41.1"
+  },
   "publishConfig": {
     "access": "public"
   },
