--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Install playground dependencies
         run: cd playground && npm install
 
+      - name: Build package
+        run: npm run build
+
       - name: Start dev server
         run: |
           cd playground && npm run dev &
