--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,6 +29,11 @@ jobs:
       - name: Build package
         run: npm run build
 
+      - name: Setup home directory
+        run: |
+          mkdir -p /tmp/playwright-home
+          chmod 755 /tmp/playwright-home
+
       - name: Start dev server
         run: |
           cd playground && npm run dev &
@@ -46,6 +51,8 @@ jobs:
 
       - name: Run Playwright tests
         run: npm run test
+        env:
+          HOME: /tmp/playwright-home
 
       - uses: actions/upload-artifact@v4
         if: always()
