--- a/.github/workflows/deploy-playground.yml
+++ b/.github/workflows/deploy-playground.yml
@@ -43,10 +43,7 @@ jobs:
         run: cd playground && npm ci
 
       - name: Build playground for GitHub Pages
-        run: cd playground && npm run build
-        env:
-          # Set the base path for GitHub Pages (replace 'positionobserver' with your repo name if different)
-          VITE_BASE_PATH: /positionobserver/
+        run: cd playground && VITE_BASE_PATH=/positionobserver/ npm run build
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
