--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,9 +1,6 @@
 {
   "$schema": "https://unpkg.com/@changesets/config@1.5.0/schema.json",
-  "changelog": [
-    "@changesets/changelog-github",
-    { "repo": "Shopify/positionobserver" }
-  ],
+  "changelog": "@changesets/changelog-git",
   "commit": false,
   "access": "public",
   "baseBranch": "main",
