--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "eslint-config-prettier": "^10.1.5",
     "prettier": "^3.5.3",
     "tsup": "8.3.5",
-    "typescript": "^5.5.2"
+    "typescript": "^5.5.2",
+    "vite": "^7.0.6"
   },
   "optionalDependencies": {
     "@rollup/rollup-linux-x64-gnu": "^4.41.1"
